@@ -1,8 +1,8 @@
 Package: RcppSpdlog
 Type: Package
 Title: R and C++ Interfaces to 'spdlog' C++ Header Library for Logging
-Version: 0.0.14
-Date: 2023-07-09
+Version: 0.0.15
+Date: 2023-11-28
 License: GPL (>= 2)
 Author: Dirk Eddelbuettel
 Maintainer: Dirk Eddelbuettel <edd@debian.org>
@@ -19,6 +19,6 @@ Suggests: simplermarkdown
 VignetteBuilder: simplermarkdown
 RoxygenNote: 6.0.1
 NeedsCompilation: yes
-Packaged: 2023-07-09 13:08:29 UTC; edd
+Packaged: 2023-11-29 18:57:27 UTC; edd
 Repository: CRAN
-Date/Publication: 2023-07-10 23:40:27 UTC
+Date/Publication: 2023-11-29 19:20:02 UTC
