@@ -1,15 +1,15 @@
-76ed417e087da81bf548a39af18af037 *ChangeLog
-3fc67f6e5ced67a3948f29c863e993eb *DESCRIPTION
+b07f38ae45c388f2519acdcff46a9495 *ChangeLog
+26dd047a365de6c69572922d5b425f80 *DESCRIPTION
 c46c5820371c6a714067c2572061e64a *NAMESPACE
 30f84c9bd98db0266231121080e5abdf *R/RcppExports.R
 2ae3d258444ab4c38a71ba99276cd3a9 *R/stopwatch.R
 5ebc2a6fa26929a6674cff0ec4736c90 *README.md
-ca3518411c789a1ad52e2f114028abd4 *build/partial.rdb
-3122c9391bf1f9bf51e6402e079cea4f *build/vignette.rds
+0891444625e7ebb8ac70d4f8c67a1777 *build/partial.rdb
+1770040a33e0884f481d9e64cce84f83 *build/vignette.rds
 87c92bd52eb970c53e5006cdb3fb093d *cleanup
 9757d633b341be4d649d5671a48ca208 *inst/AUTHORS
 21abd8dfed73283e13f84d25982e2472 *inst/COPYRIGHTS
-5c3650bdaf59576494ebc7432862a925 *inst/NEWS.Rd
+2676ff9f1a0cc71f006f54f19630b29e *inst/NEWS.Rd
 a9f93e3d39b8333438fd5f4a4dd80b14 *inst/doc/introduction.html
 0aaf84178d2b802cc2d4009deba39744 *inst/doc/introduction.md
 222438c270ac069c195531bf7d270175 *inst/examples/exampleOne.cpp
@@ -126,14 +126,14 @@ d997ced22b4350accb41d91d492fe087 *inst/include/spdlog/stopwatch.h
 47b40bed6bf682c6f7cb03de53b8212b *inst/include/spdlog/tweakme.h
 ad7a88c077157af81fd47c7794a13023 *inst/include/spdlog/version.h
 c851cde430d920b87781927b016ff5a8 *inst/include/spdlog_stopwatch.h
-b29311efc93d948bf802b1ac5e38a10b *man/RcppSpdlog-package.Rd
+346eb5456550f5aacf6c56360c8d2041 *man/RcppSpdlog-package.Rd
 6bcb50fdd388e53b542b335934ad5abf *man/exampleRsink.Rd
 de5dccf3b272b1359a590e86d5239fc2 *man/formatter.Rd
 eba360966785b29107b0a86036972b45 *man/get_stopwatch.Rd
 94a017087f08e879acda57af6464088a *man/log_setup.Rd
 0dd8ebcb380b0c3a1a8628f3f25a270e *man/setLogLevel.Rd
 5c42424676b675fab5435cfc162e5861 *src/Makevars
-b102944cf9806805e6998b3e92221a80 *src/RcppExports.cpp
+f33e06159234d24143cb4712887129ba *src/RcppExports.cpp
 4eb7e3b32d8414ecf6179a8508fd9244 *src/exampleRsink.cpp
 24bf65c9770c5a2f4f914c260ad069cc *src/formatter.cpp
 b3b388655dbd3ce295c2eed5edce5973 *src/interface.cpp
